--- a/app/src/main/res/layout-v17/ongoing_reservation_fragment.xml
+++ b/app/src/main/res/layout-v17/ongoing_reservation_fragment.xml
@@ -86,7 +86,7 @@
         android:layout_height="10dp"
         android:layout_marginTop="2dp"
         android:visibility="gone"
-        style="@android:style/Widget.ProgressBar.Horizontal"
+        style="@style/CustomProgressBar"
         app:layout_constraintTop_toBottomOf="@+id/barDurationText"
         app:layout_constraintStart_toStartOf="@+id/ongoingSeekBar"
         />
