--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -15,8 +15,8 @@
     <color name="StatusFreeColor">#0098d0</color>
     <color name="StatusReservedColor">#e5053a</color> //red
     <color name="Transparent">#0000</color>
-    <color name="CalendarMarkerReservedColor">#0098d0</color> //blue - todo: We need to change this because it shouldnt be the same color as "free"
-    <color name="CalendarMarkerTentativeColor">#aa00a8e0</color>
+    <color name="CalendarMarkerReservedColor">#e5053a</color>
+    <color name="CalendarMarkerTentativeColor">#B3e5053a</color>
     <color name="Orange">#fca311</color>
     <color name="TimeBarTickColor">#3333</color>
     <color name="ButtonTextNormal">#333</color>
@@ -36,6 +36,11 @@
     <color name="seekBarProgressBackgroundColor">#F8F8F8</color>
     <color name="seekBarThumbColor">#424242</color>
 
+    <color name="ReserveButtonAvailable">#F8F8F8</color>
+    <color name="ReserveButtonUnavailable">#424242</color>
+
+    <color name="CurrentTimeLineColor">#A6000000</color>
+
 
     <!-- NO LONGER USED -->
     <color name="TrafficLightYellow">#cee100</color>
@@ -49,7 +54,7 @@
     <color name="TrafficLightYellowButtonPressedText">#e4ec8c</color>
     <color name="TrafficLightGreenButtonPressedText">#98dd6f</color>
 
-    <color name="TextColor">#000</color>
+    <color name="TextColor">#000000</color>
     <color name="TimeSpanTextColor">#529200</color>
 
     <style name="TimeSpanTimeStyle">
