--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -18,10 +18,10 @@
     <color name="CalendarTextColor">#424242</color>
     <color name="CalendarResTextColor">#F8F8F8</color>
     <color name="StatusFreeColor">#0098d0</color>
-    <color name="StatusReservedColor">#e5053a</color> //red
+    <color name="StatusReservedColor">#CCe5053a</color> //red
     <color name="Transparent">#0000</color>
-    <color name="CalendarMarkerReservedColor">#e5053a</color>
-    <color name="CalendarMarkerTentativeColor">#B3e5053a</color>
+    <color name="CalendarMarkerReservedColor">#CCe5053a</color>
+    <color name="CalendarMarkerTentativeColor">#80e5053a</color>
     <color name="Orange">#fca311</color>
     <color name="TimeBarTickColor">#3333</color>
     <color name="ButtonTextNormal">#333</color>
@@ -37,9 +37,9 @@
     <color name="TrafficLightReserved">#e5053a</color> //red
     <color name="TrafficLightText">#fff</color>
 
-    <color name="seekBarProgress">#424242</color>
-    <color name="seekBarProgressBackgroundColor">#F8F8F8</color>
-    <color name="seekBarThumbColor">#424242</color>
+    <color name="seekBarProgress">#F8F8F8</color>
+    <color name="seekBarProgressBackgroundColor">#424242</color>
+    <color name="seekBarThumbColor">#F8F8F8</color>
 
     <color name="ReserveButtonAvailable">#F8F8F8</color>
     <color name="ReserveButtonUnavailable">#424242</color>
