--- a/app/src/main/res/layout/room_status_fragment.xml
+++ b/app/src/main/res/layout/room_status_fragment.xml
@@ -95,21 +95,20 @@
         android:layout_height="wrap_content"
         android:layout_below="@id/roomStatus"
         android:layout_marginStart="8dp"
+        android:layout_marginTop="44dp"
         android:layout_marginEnd="8dp"
-        android:textAlignment="viewStart"
         android:text="@string/quick_booking"
+        android:textAlignment="viewStart"
+        android:textAllCaps="true"
         android:textColor="@color/colorPrimary70Alpha"
         android:textIsSelectable="false"
         android:textSize="25sp"
         android:textStyle="bold"
-        android:textAllCaps="true"
-        android:layout_marginTop="20sp"
+        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/meetingNameText"
-        app:layout_constraintBottom_toBottomOf="parent"
-        />
+        app:layout_constraintTop_toBottomOf="@+id/meetingNameText" />
 </android.support.constraint.ConstraintLayout>
 
 
