--- a/app/src/main/res/layout/traffic_lights_page_fragment.xml
+++ b/app/src/main/res/layout/traffic_lights_page_fragment.xml
@@ -10,7 +10,7 @@
         android:layout_marginTop="8dp"
         android:layout_marginEnd="8dp"
         android:layout_marginBottom="0dp"
-        android:padding="4dp"
+        android:padding="0dp"
         android:background="#0098d0"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
@@ -41,23 +41,21 @@
             app:layout_constraintTop_toBottomOf="@+id/roomStatusContainer">
         </FrameLayout>
 
-        <FrameLayout
-            android:id="@+id/dayCalendarContainer"
-            android:layout_width="0dp"
-            android:layout_height="match_parent"
-            android:layout_marginTop="30dp"
-            android:layout_marginBottom="30dp"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toEndOf="@+id/roomStatusContainer"
-            >
+    <FrameLayout
+        android:id="@+id/dayCalendarContainer"
+        android:layout_width="0dp"
+        android:layout_height="match_parent"
+        app:layout_constraintBottom_toTopOf="@+id/bottomFragmentContainer"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toEndOf="@+id/roomStatusContainer"
+        app:layout_constraintTop_toTopOf="parent">
 
-            <fragment
-                android:id="@+id/dayCalendarFragment"
-                android:name="com.futurice.android.reservator.view.trafficlights.DayCalendarFragment"
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                />
-        </FrameLayout>
+        <fragment
+            android:id="@+id/dayCalendarFragment"
+            android:name="com.futurice.android.reservator.view.trafficlights.DayCalendarFragment"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent" />
+    </FrameLayout>
 
         <FrameLayout
             android:id="@+id/bottomFragmentContainer"
