--- a/app/src/main/res/layout/traffic_lights_page_fragment.xml
+++ b/app/src/main/res/layout/traffic_lights_page_fragment.xml
@@ -19,7 +19,8 @@
 
         <FrameLayout
             android:id="@+id/roomStatusContainer"
-            android:layout_width="800dp"
+            android:layout_width="0dp"
+            app:layout_constraintWidth_percent=".7"
             android:layout_height="wrap_content"
             app:layout_constraintTop_toTopOf="parent"
             app:layout_constraintStart_toStartOf="parent">
@@ -53,7 +54,8 @@
 
         <FrameLayout
             android:id="@+id/roomReservationContainer"
-            android:layout_width="800dp"
+            android:layout_width="0dp"
+            app:layout_constraintWidth_percent=".7"
             android:layout_height="wrap_content"
             android:layout_marginBottom="8dp"
             app:layout_constraintStart_toStartOf="parent"
@@ -63,6 +65,7 @@
     <FrameLayout
         android:id="@+id/dayCalendarContainer"
         android:layout_width="0dp"
+        app:layout_constraintWidth_percent=".3"
         android:layout_height="match_parent"
         app:layout_constraintBottom_toTopOf="@+id/bottomFragmentContainer"
         app:layout_constraintEnd_toEndOf="parent"
