--- a/app/src/main/res/layout-v17/ongoing_reservation_fragment.xml
+++ b/app/src/main/res/layout-v17/ongoing_reservation_fragment.xml
@@ -9,11 +9,12 @@
     android:layout_gravity="center_horizontal"
     android:layout_marginStart="8dp"
     android:layout_marginTop="1dp"
-    android:layout_marginEnd="8dp"
-    android:layout_marginBottom="8dp"
+    android:layout_marginEnd="0dp"
+    android:layout_marginBottom="0dp"
     android:focusableInTouchMode="true"
     android:orientation="vertical"
     android:padding="10dip"
+    android:background="@color/TrafficLightReserved"
     app:layout_constraintBottom_toBottomOf="parent"
     app:layout_constraintEnd_toEndOf="parent"
     app:layout_constraintStart_toStartOf="parent"
