Made seekBar and thumb configurable from styles and dimens files.
The seekbar on the Free (blue) page and Reserved (red) screens have different color resources and different xml files for bar and thumb

--- a/app/src/main/res/layout-v17/ongoing_reservation_fragment.xml
+++ b/app/src/main/res/layout-v17/ongoing_reservation_fragment.xml
@@ -36,16 +36,15 @@
     <SeekBar
         android:id="@+id/ongoingSeekBar"
         android:layout_width="match_parent"
-        android:layout_height="36dp"
+        android:layout_height="wrap_content"
         android:layout_alignParentTop="false"
         android:layout_alignParentEnd="true"
         android:layout_centerHorizontal="true"
         android:layout_marginTop="24dp"
         android:max="90"
         android:progress="30"
-        android:progressBackgroundTint="@color/seekBarProgressBackgroundColor"
-        android:progressTint="@color/seekBarProgress"
-        android:thumbTint="@color/seekBarThumbColor"
+        android:progressDrawable="@drawable/seekbar_reserved"
+        android:thumb="@drawable/seekthumb_reserved"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
