Making input text more obvious

--- a/app/src/main/res/layout-v17/room_reservation_fragment.xml
+++ b/app/src/main/res/layout-v17/room_reservation_fragment.xml
@@ -88,11 +88,12 @@
         android:layout_marginTop="16dp"
         android:layout_marginEnd="8dp"
         android:layout_marginBottom="108dp"
+        android:background="@color/faintWhite"
         android:ems="10"
         android:hint="@string/meeting_description"
         android:inputType="textPersonName"
         android:singleLine="true"
-        android:textColor="#F8F8F8"
+        android:textColor="@color/pureWhite"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
