Small style changes, modifications to textInput box and associated string

--- a/app/src/main/res/layout-v17/room_reservation_fragment.xml
+++ b/app/src/main/res/layout-v17/room_reservation_fragment.xml
@@ -81,7 +81,7 @@
     <EditText
         android:id="@+id/nameInput"
         android:layout_width="match_parent"
-        android:layout_height="46dp"
+        android:layout_height="43dp"
         android:layout_alignParentStart="true"
         android:layout_alignParentBottom="true"
         android:layout_marginStart="10dp"
@@ -90,10 +90,13 @@
         android:layout_marginBottom="108dp"
         android:background="@color/faintWhite"
         android:ems="10"
+        android:textSize="22sp"
         android:hint="@string/meeting_description"
+        android:textColorHint="@color/pureWhite"
         android:inputType="textPersonName"
         android:singleLine="true"
         android:textColor="@color/pureWhite"
+        android:textAlignment="gravity"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
