--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -2,4 +2,8 @@
 <resources>
     <dimen name="digitalClockTextSize">36sp</dimen>
   <dimen name="appCheckPermissionNotAllowed">30sp</dimen>
+    <dimen name="reservationSubjectTextSize">14sp</dimen>
+    <dimen name="reservationSubjectPaddingX">6dp</dimen>
+    <dimen name="reservationSubjectPaddingY">0dp</dimen>
+    <dimen name="timeLabelTextSize">14dp</dimen>
 </resources>
