--- a/app/src/main/res/layout/room_status_fragment.xml
+++ b/app/src/main/res/layout/room_status_fragment.xml
@@ -24,6 +24,7 @@
         android:layout_marginStart="8dp"
         android:layout_marginTop="8dp"
         android:layout_marginEnd="8dp"
+        android:singleLine="true"
         android:textAlignment="viewStart"
         android:textAllCaps="true"
         android:textColor="@color/TrafficLightText"
