--- a/app/src/main/res/layout/room_status_fragment.xml
+++ b/app/src/main/res/layout/room_status_fragment.xml
@@ -27,10 +27,11 @@
         android:singleLine="true"
         android:textAlignment="viewStart"
         android:textAllCaps="true"
-        android:textColor="@color/TrafficLightText"
+        android:textColor="@color/colorPrimary70Alpha"
         android:textIsSelectable="false"
         android:textSize="40sp"
         android:textStyle="bold"
+        android:fontFamily="@font/open_sans_regular_family"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
@@ -45,10 +46,11 @@
         android:layout_marginTop="72dp"
         android:layout_marginEnd="8dp"
         android:text="Status"
+        android:fontFamily="@font/open_sans_regular_family"
         android:textAlignment="viewStart"
         android:textColor="#F8F8F8"
         android:textIsSelectable="false"
-        android:textSize="43sp"
+        android:textSize="40sp"
         android:textStyle="bold"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
@@ -58,15 +60,16 @@
     <TextView
         android:id="@+id/statusUntilText"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="58dp"
         android:layout_below="@id/roomStatusInfo"
         android:layout_marginStart="8dp"
         android:layout_marginEnd="8dp"
+        android:fontFamily="@font/open_sans_regular"
         android:text="Time status ('free all day')"
         android:textAlignment="viewStart"
         android:textColor="@color/colorPrimary85Alpha"
         android:textIsSelectable="false"
-        android:textSize="35sp"
+        android:textSize="38sp"
         android:textStyle="bold"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="1.0"
@@ -82,9 +85,10 @@
         android:layout_marginEnd="8dp"
         android:textAlignment="viewStart"
         android:text="User Name/meeting name"
+        android:fontFamily="@font/open_sans_regular_family"
         android:textColor="@color/colorPrimary"
         android:textIsSelectable="false"
-        android:textSize="35sp"
+        android:textSize="38sp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.6"
         app:layout_constraintStart_toStartOf="parent"
@@ -101,6 +105,7 @@
         android:text="@string/quick_booking"
         android:textAlignment="viewStart"
         android:textAllCaps="true"
+        android:fontFamily="@font/open_sans_regular_family"
         android:textColor="@color/colorPrimary70Alpha"
         android:textIsSelectable="false"
         android:textSize="25sp"
