Minor font changes

--- a/app/src/main/res/layout/room_status_fragment.xml
+++ b/app/src/main/res/layout/room_status_fragment.xml
@@ -31,7 +31,6 @@
         android:textIsSelectable="false"
         android:textSize="40sp"
         android:textStyle="bold"
-        android:fontFamily="@font/open_sans_regular_family"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
@@ -46,7 +45,6 @@
         android:layout_marginTop="72dp"
         android:layout_marginEnd="8dp"
         android:text="Status"
-        android:fontFamily="@font/open_sans_regular_family"
         android:textAlignment="viewStart"
         android:textColor="#F8F8F8"
         android:textIsSelectable="false"
@@ -64,7 +62,6 @@
         android:layout_below="@id/roomStatusInfo"
         android:layout_marginStart="8dp"
         android:layout_marginEnd="8dp"
-        android:fontFamily="@font/open_sans_regular"
         android:text="Time status ('free all day')"
         android:textAlignment="viewStart"
         android:textColor="@color/colorPrimary85Alpha"
@@ -85,7 +82,6 @@
         android:layout_marginEnd="8dp"
         android:textAlignment="viewStart"
         android:text="User Name/meeting name"
-        android:fontFamily="@font/open_sans_regular_family"
         android:textColor="@color/colorPrimary"
         android:textIsSelectable="false"
         android:textSize="38sp"
@@ -100,15 +96,14 @@
         android:layout_height="wrap_content"
         android:layout_below="@id/roomStatus"
         android:layout_marginStart="8dp"
-        android:layout_marginTop="64dp"
+        android:layout_marginTop="72dp"
         android:layout_marginEnd="8dp"
         android:text="@string/quick_booking"
-        android:textAlignment="viewStart"
+        android:textAlignment="center"
         android:textAllCaps="true"
-        android:fontFamily="@font/open_sans_regular_family"
         android:textColor="@color/colorPrimary70Alpha"
         android:textIsSelectable="false"
-        android:textSize="25sp"
+        android:textSize="23sp"
         android:textStyle="bold"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
